--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "laravel/legacy-factories": "^1.0",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^3.0",
+        "mcamara/laravel-localization": "^1.8",
         "revolution/laravel-google-sheets": "*"
     },
     "require-dev": {
